	- ADDED: Platform web.
	- ADDED: Raygui textures with SetShapesTexture.
	- CHANGE: Raygui wrapper library is now object based. Possible to have multiple separated gui systems.
	- ADDED: Raygui wrapper library disabled and styles for each element.
	- ADDED: Files management functions.
	- ADDED: More Model management functions.
	- ADDED: More Model animations management functions.

DETAILED CHANGES:
	- REMOVED: DrawLineBezierQuad, DrawLineBezierCubic.
	- REMOVED: GenImageGradientV, GenImageGradientH.
	- ADDED: GenImageGradientLinear and GenImageGradientSquare.
	- ADDED: LoadImageSvg and ExportImageToMemory.
	- ADDED: ImageRotate.
	- ADDED: SetTextLineSpacing.
	- ADDED: LoadSoundAlias and UnloadSoundAlias.
	- ADDED: GetApplicationDirectory.
	- FIXED: Snake example after Vector2Angle change.
	- FIXED: Raygui edit mode selection.
	- CHANGE: Moved glfw headers to GLFW folder.
	- CHANGE: Term globals changed to defines in documentation.
	- CHANGE: Event documentation is now described in c files.
	- ADDED: ExportBufferAsCode.
	- ADDED: GetTextureDefault.
	- CHANGE: Renamed Files management functions to Files system functions as in raylib.
	- CHANGE: Renamed ExportBufferAsCode to ExportDataAsCode.
	- ADDED: BoneInfo.
	- ADDED: Transform.

------------------------------------------------------------------------
Release:	ReiLua version 0.6.0		Using Raylib 4.5
------------------------------------------------------------------------
KEY CHANGES:
	- CHANGED: Switch from ID based objects to userdata.
	- CHANGED: Object unloading is handled by Lua garbage collection by default.
	- CHANGED: Rely mostly on luaL_check* functions for arg checking.
	- CHANGED: ModelAnimations are changed to separate ModelAnimation types as in Raylib.
	- ADDED: Userdata objects can be referenced with lightuserdata.
	- ADDED: GC_UNLOAD build time define for enabling/disabling Lua garbage collection for objects.
	Can be checked with IsGCUnloadEnabled
	- ADDED: Shaders management functions.