@@ -7,6 +7,7 @@ snake.png				Jussi Viitala				CC0
 ui_border.png			Jussi Viitala				CC0
 ui_bgr.png				Jussi Viitala				CC0
 gradient.png			Jussi Viitala				CC0
+light.png			Jussi Viitala				CC0
 check-mark.png			Delapouite					Creative Commons 3.0	https://game-icons.net										Resized
 circle.png				Delapouite					Creative Commons 3.0	https://game-icons.net										Resized
 plain-circle.png		Delapouite					Creative Commons 3.0	https://game-icons.net										Resized
